[package]
name = "voiceflow-core"
version = "0.1.0"
edition = "2024"

[dependencies]
voiceflow-shared = { path = "../voiceflow-shared" }
voiceflow-stt = { path = "../voiceflow-stt" }
voiceflow-audio = { path = "../voiceflow-audio" }
voiceflow-vad = { path = "../voiceflow-vad" }
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
ureq = "2.9"
directories = "5.0"
