[package]
name = "voiceflow-core-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.voiceflow-core]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "pipeline_fuzz"
path = "fuzz_targets/pipeline_fuzz.rs"
test = false
doc = false
